# sea-wallet-ai-overflow

./: README.md  seaVault.ts  seaVaultUsageExample.jsx
Contract/decentrust/: Move.toml
Contract/decentrust/sources/: agentConfig.move  vault.move
Contract/decentrust/tests/: decentrust_tests.move
backend/: README.md
backend/SeaWalletBE/: Cargo.toml
backend/SeaWalletBE/migrations/: 20250512145220_create_customer_messages.sql  init.sql
backend/SeaWalletBE/src/: main.rs
contract/sources/: agentConfig.move
contracts/SeaVault/: .gitignore  Move.toml  Published.toml
contracts/SeaVault/sources/: dao.move  scallopRelayer.move  seaVault.move  someshit.move  subscribe.move  subscription.move  vault.move
contracts/SeaVault/tests/: smartwill_tests.move
contracts/smartwill/sources/: vault.move
contracts/willservice/: Move.toml
contracts/willservice/sources/: will.move
extension/sea-wallet/: package.json  pnpm-lock.yaml
fe-next/: package.json  pnpm-lock.yaml
fe-next/public/ani/: or.mdp
fe-next/src/app/: constants.ts  layout.jsx  page.tsx  provider.tsx
frontend/: .gitignore  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
scallop-relayer/scallop_relayer/: Move.toml
sea/: pnpm-lock.yaml
smartwill/: Move.toml
smartwill/sources/: agentConfig.move  countdown.move  dao.move  dao_me.move  scallopRelayer.move  smartwill.move  subscribe.move  vault.move
smartwill/tests/: smartwill_tests.move
smtwil-fe/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
smtwil-fe/public/: desktop.ini
(+121 files in other folders)
