[package]
name = "SeaWalletBE"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.45.0", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
